--- a/src/functions/_hu-get-class-modules.scss
+++ b/src/functions/_hu-get-class-modules.scss
@@ -1,3 +1,3 @@
 @function hu-get-class-modules($modules, $key, $fallback) {
-  @return if(type-of($modules) == map, hu-get($modules, $key, true), $fallback)
+  @return if(type-of($modules) == map and map-has-key($modules, $key), hu-get($modules, $key), $fallback)
 }
