--- a/src/classes/_hu-border-style.scss
+++ b/src/classes/_hu-border-style.scss
@@ -19,13 +19,13 @@ $hu-border-style-parents: hu-get-class-modules($hu-border-style-modules, parents
 }
 
 @if (index($hu-border-style-core-modules, responsive)) {
-  @each $bp-scale, $bp-value in $hu-breakpoints {
-    @include hu-media-query($bp-value) {
+  @each $mq-scale, $mq-value in $hu-media-queries {
+    @include hu-media-query($mq-value) {
       @each $scale, $value in $hu-border-style-scale {
         @each $type, $properties in $hu-border-style-types {
           $class-name: hu-class-name(#{$side-type}-style-#{$type});
 
-          @include hu-responsive($class-name, $hu-border-style-core-modules, $bp-scale) {
+          @include hu-responsive($class-name, $hu-border-style-core-modules, $mq-scale) {
             @each $property in $properties {
               #{$property}: $value #{hu-important()};
             }
@@ -54,13 +54,13 @@ $hu-border-style-parents: hu-get-class-modules($hu-border-style-modules, parents
   }
 
   @if (index($hu-border-style-core-modules, responsive)) {
-    @each $bp-scale, $bp-value in $hu-breakpoints {
-      @include hu-media-query($bp-value) {
+    @each $mq-scale, $mq-value in $hu-media-queries {
+      @include hu-media-query($mq-value) {
         @each $scale, $value in $hu-border-style-scale {
           @each $type, $properties in $hu-border-style-types {
             $class-name: hu-class-name(#{$side-type}-style-#{$type});
 
-            @include hu-pseudo-responsive($class-name, $hu-border-style-pseudos, $hu-border-style-core-modules, $bp-scale) {
+            @include hu-pseudo-responsive($class-name, $hu-border-style-pseudos, $hu-border-style-core-modules, $mq-scale) {
               @each $property in $properties {
                 #{$property}: $value #{hu-important()};
               }
@@ -90,13 +90,13 @@ $hu-border-style-parents: hu-get-class-modules($hu-border-style-modules, parents
   }
 
   @if (index($hu-border-style-core-modules, responsive)) {
-    @each $bp-scale, $bp-value in $hu-breakpoints {
-      @include hu-media-query($bp-value) {
+    @each $mq-scale, $mq-value in $hu-media-queries {
+      @include hu-media-query($mq-value) {
         @each $scale, $value in $hu-border-style-scale {
           @each $type, $properties in $hu-border-style-types {
             $class-name: hu-class-name(#{$side-type}-style-#{$type});
 
-            @include hu-parent-responsive($class-name, $hu-border-style-parents, $hu-border-style-core-modules, $bp-scale) {
+            @include hu-parent-responsive($class-name, $hu-border-style-parents, $hu-border-style-core-modules, $mq-scale) {
               @each $property in $properties {
                 #{$property}: $value #{hu-important()};
               }
