--- a/src/mixins/_hu-responsive-base.scss
+++ b/src/mixins/_hu-responsive-base.scss
@@ -1,5 +1,5 @@
-@mixin hu-responsive-base($class-name, $bp-scale) {
-  .bp-#{$bp-scale}--#{$class-name} {
+@mixin hu-responsive-base($class-name, $mq-scale) {
+  .mq-#{$mq-scale}--#{$class-name} {
     @content;
   }
 }
