--- a/src/variables/global/_index.scss
+++ b/src/variables/global/_index.scss
@@ -1,9 +1,9 @@
-@import "hu-breakpoints";
 @import "hu-border";
 @import "hu-colors";
 @import "hu-debug";
 @import "hu-escape-class-name-types";
 @import "hu-focus";
+@import "hu-media-queries";
 @import "hu-namespace";
 @import "hu-spacing-scale";
 @import "hu-states";
