--- a/src/classes/_hu-border-color.scss
+++ b/src/classes/_hu-border-color.scss
@@ -20,15 +20,15 @@ $hu-border-color-parents: hu-get-class-modules($hu-border-color-modules, parents
 }
 
 @if (index($hu-border-color-core-modules, responsive)) {
-  @each $bp-scale, $bp-value in $hu-breakpoints {
-    @include hu-media-query($bp-value) {
+  @each $mq-scale, $mq-value in $hu-media-queries {
+    @include hu-media-query($mq-value) {
       @each $hue, $colors in $hu-border-color-types {
         @each $color-scale, $color-value in $colors {
           @each $side-type, $side-properties in $hu-border-color-sides {
             $side-properties: if($side-properties, $side-properties, $side-type);
             $class-name: hu-class-name(#{$side-type}-color-#{$hue}-#{$color-scale});
 
-            @include hu-responsive($class-name, $hu-border-color-core-modules, $bp-scale) {
+            @include hu-responsive($class-name, $hu-border-color-core-modules, $mq-scale) {
               @each $property in $side-properties {
                 #{$property}-color: $color-value #{hu-important()};
               }
@@ -59,15 +59,15 @@ $hu-border-color-parents: hu-get-class-modules($hu-border-color-modules, parents
   }
 
   @if (index($hu-border-color-core-modules, responsive)) {
-    @each $bp-scale, $bp-value in $hu-breakpoints {
-      @include hu-media-query($bp-value) {
+    @each $mq-scale, $mq-value in $hu-media-queries {
+      @include hu-media-query($mq-value) {
         @each $hue, $colors in $hu-border-color-types {
           @each $color-scale, $color-value in $colors {
             @each $side-type, $side-properties in $hu-border-color-sides {
               $side-properties: if($side-properties, $side-properties, $side-type);
               $class-name: hu-class-name(#{$side-type}-color-#{$hue}-#{$color-scale});
 
-              @include hu-pseudo-responsive($class-name, $hu-border-color-pseudos, $hu-border-color-core-modules, $bp-scale) {
+              @include hu-pseudo-responsive($class-name, $hu-border-color-pseudos, $hu-border-color-core-modules, $mq-scale) {
                 @each $property in $side-properties {
                   #{$property}-color: $color-value #{hu-important()};
                 }
@@ -99,15 +99,15 @@ $hu-border-color-parents: hu-get-class-modules($hu-border-color-modules, parents
   }
 
   @if (index($hu-border-color-core-modules, responsive)) {
-    @each $bp-scale, $bp-value in $hu-breakpoints {
-      @include hu-media-query($bp-value) {
+    @each $mq-scale, $mq-value in $hu-media-queries {
+      @include hu-media-query($mq-value) {
         @each $hue, $colors in $hu-border-color-types {
           @each $color-scale, $color-value in $colors {
             @each $side-type, $side-properties in $hu-border-color-sides {
               $side-properties: if($side-properties, $side-properties, $side-type);
               $class-name: hu-class-name(#{$side-type}-color-#{$hue}-#{$color-scale});
 
-              @include hu-parent-responsive($class-name, $hu-border-color-parents, $hu-border-color-core-modules, $bp-scale) {
+              @include hu-parent-responsive($class-name, $hu-border-color-parents, $hu-border-color-core-modules, $mq-scale) {
                 @each $property in $side-properties {
                   #{$property}-color: $color-value #{hu-important()};
                 }
