--- a/src/classes/_hu-padding.scss
+++ b/src/classes/_hu-padding.scss
@@ -17,13 +17,13 @@ $hu-padding-parents: hu-get-class-modules($hu-padding-modules, parents, null);
 }
 
 @if (index($hu-padding-core-modules, responsive)) {
-  @each $bp-scale, $bp-value in $hu-breakpoints {
-    @include hu-media-query($bp-value) {
+  @each $mq-scale, $mq-value in $hu-media-queries {
+    @include hu-media-query($mq-value) {
       @each $scale, $value in $hu-padding-scale {
         @each $type, $properties in $hu-padding-types {
           $class-name: hu-class-name(#{$type}-#{$scale});
 
-          @include hu-responsive($class-name, $hu-padding-core-modules, $bp-scale) {
+          @include hu-responsive($class-name, $hu-padding-core-modules, $mq-scale) {
             @each $property in $properties {
               #{$property}: $value #{hu-important()};
             }
@@ -50,13 +50,13 @@ $hu-padding-parents: hu-get-class-modules($hu-padding-modules, parents, null);
   }
 
   @if (index($hu-padding-core-modules, responsive)) {
-    @each $bp-scale, $bp-value in $hu-breakpoints {
-      @include hu-media-query($bp-value) {
+    @each $mq-scale, $mq-value in $hu-media-queries {
+      @include hu-media-query($mq-value) {
         @each $scale, $value in $hu-padding-scale {
           @each $type, $properties in $hu-padding-types {
             $class-name: hu-class-name(#{$type}-#{$scale});
 
-            @include hu-pseudo-responsive($class-name, $hu-padding-pseudos, $hu-padding-core-modules, $bp-scale) {
+            @include hu-pseudo-responsive($class-name, $hu-padding-pseudos, $hu-padding-core-modules, $mq-scale) {
               @each $property in $properties {
                 #{$property}: $value #{hu-important()};
               }
@@ -84,13 +84,13 @@ $hu-padding-parents: hu-get-class-modules($hu-padding-modules, parents, null);
   }
 
   @if (index($hu-padding-core-modules, responsive)) {
-    @each $bp-scale, $bp-value in $hu-breakpoints {
-      @include hu-media-query($bp-value) {
+    @each $mq-scale, $mq-value in $hu-media-queries {
+      @include hu-media-query($mq-value) {
         @each $scale, $value in $hu-padding-scale {
           @each $type, $properties in $hu-padding-types {
             $class-name: hu-class-name(#{$type}-#{$scale});
 
-            @include hu-parent-responsive($class-name, $hu-padding-parents, $hu-padding-core-modules, $bp-scale) {
+            @include hu-parent-responsive($class-name, $hu-padding-parents, $hu-padding-core-modules, $mq-scale) {
               @each $property in $properties {
                 #{$property}: $value #{hu-important()};
               }
