--- a/src/classes/_hu-theme-bg-color.scss
+++ b/src/classes/_hu-theme-bg-color.scss
@@ -13,14 +13,14 @@
 }
 
 @if (index($hu-theme-bg-color-modules, responsive)) {
-  @each $bp-scale, $bp-value in $hu-breakpoints {
-    @include hu-media-query($bp-value) {
+  @each $mq-scale, $mq-value in $hu-media-queries {
+    @include hu-media-query($mq-value) {
       @each $theme, $keys in $hu-themes {
         @each $key, $value in $keys {
           $class-name: hu-class-name(bg-color-#{$key});
           $property: background-color;
 
-          @include hu-theme-responsive($class-name, $theme, $hu-theme-bg-color-modules, $bp-scale) {
+          @include hu-theme-responsive($class-name, $theme, $hu-theme-bg-color-modules, $mq-scale) {
             #{$property}: $value #{hu-important()};
           }
         }
