--- a/src/classes/_hu-theme-border-color.scss
+++ b/src/classes/_hu-theme-border-color.scss
@@ -17,15 +17,15 @@
 }
 
 @if (index($hu-theme-border-color-modules, responsive)) {
-  @each $bp-scale, $bp-value in $hu-breakpoints {
-    @include hu-media-query($bp-value) {
+  @each $mq-scale, $mq-value in $hu-media-queries {
+    @include hu-media-query($mq-value) {
       @each $theme, $keys in $hu-themes {
         @each $key, $value in $keys {
           @each $side-type, $side-properties in $hu-theme-border-color-sides {
             $side-properties: if($side-properties, $side-properties, $side-type);
             $class-name: hu-class-name(#{$side-type}-color-#{$key});
 
-            @include hu-theme-responsive($class-name, $theme, $hu-theme-bg-color-modules, $bp-scale) {
+            @include hu-theme-responsive($class-name, $theme, $hu-theme-bg-color-modules, $mq-scale) {
               @each $property in $side-properties {
                 #{$property}-color: $value;
               }
