--- a/src/classes/_hu-theme-color.scss
+++ b/src/classes/_hu-theme-color.scss
@@ -13,8 +13,8 @@
 }
 
 @if (index($hu-theme-color-modules, responsive)) {
-  @each $bp-scale, $bp-value in $hu-breakpoints {
-    @include hu-media-query($bp-value) {
+  @each $mq-scale, $mq-value in $hu-media-queries {
+    @include hu-media-query($mq-value) {
       @each $theme, $keys in $hu-themes {
         @each $key, $value in $keys {
           $class-name: hu-class-name(color-#{$key});
