--- a/src/classes/_hu-translate-y.scss
+++ b/src/classes/_hu-translate-y.scss
@@ -16,14 +16,14 @@ $hu-translate-y-parents: hu-get-class-modules($hu-translate-y-modules, parents, 
 }
 
 @if (index($hu-translate-y-core-modules, responsive)) {
-  @each $bp-scale, $bp-value in $hu-breakpoints {
-    @include hu-media-query($bp-value) {
+  @each $mq-scale, $mq-value in $hu-media-queries {
+    @include hu-media-query($mq-value) {
       @each $type, $value in $hu-translate-y-types {
         $class-name: hu-class-name(translate-y-#{$type});
         $property: translate-y;
         $value: if($value, $value, $type);
 
-        @include hu-responsive($class-name, $hu-translate-y-core-modules, $bp-scale) {
+        @include hu-responsive($class-name, $hu-translate-y-core-modules, $mq-scale) {
           #{$property}: $value #{hu-important()};
         }
       }
@@ -45,14 +45,14 @@ $hu-translate-y-parents: hu-get-class-modules($hu-translate-y-modules, parents, 
   }
 
   @if (index($hu-translate-y-core-modules, responsive)) {
-    @each $bp-scale, $bp-value in $hu-breakpoints {
-      @include hu-media-query($bp-value) {
+    @each $mq-scale, $mq-value in $hu-media-queries {
+      @include hu-media-query($mq-value) {
         @each $type, $value in $hu-translate-y-types {
           $class-name: hu-class-name(translate-y-#{$type});
           $property: translate-y;
           $value: if($value, $value, $type);
 
-          @include hu-pseudo-responsive($class-name, $hu-translate-y-pseudos, $hu-translate-y-core-modules, $bp-scale) {
+          @include hu-pseudo-responsive($class-name, $hu-translate-y-pseudos, $hu-translate-y-core-modules, $mq-scale) {
             #{$property}: $value #{hu-important()};
           }
         }
@@ -75,14 +75,14 @@ $hu-translate-y-parents: hu-get-class-modules($hu-translate-y-modules, parents, 
   }
 
   @if (index($hu-translate-y-core-modules, responsive)) {
-    @each $bp-scale, $bp-value in $hu-breakpoints {
-      @include hu-media-query($bp-value) {
+    @each $mq-scale, $mq-value in $hu-media-queries {
+      @include hu-media-query($mq-value) {
         @each $type, $value in $hu-translate-y-types {
           $class-name: hu-class-name(translate-y-#{$type});
           $property: translate-y;
           $value: if($value, $value, $type);
 
-          @include hu-parent-responsive($class-name, $hu-translate-y-parents, $hu-translate-y-core-modules, $bp-scale) {
+          @include hu-parent-responsive($class-name, $hu-translate-y-parents, $hu-translate-y-core-modules, $mq-scale) {
             #{$property}: $value #{hu-important()};
           }
         }
