--- a/src/mixins/_hu-responsive-group-state.scss
+++ b/src/mixins/_hu-responsive-group-state.scss
@@ -1,6 +1,6 @@
-@mixin hu-responsive-group-state($class-name, $bp-scale) {
+@mixin hu-responsive-group-state($class-name, $mq-scale) {
   @each $state in $hu-states {
-    .group.#{$state} .group__bp-#{$bp-scale}-#{$state}--#{$class-name} {
+    .group.#{$state} .group__mq-#{$mq-scale}-#{$state}--#{$class-name} {
       @content;
     }
   }
