--- a/src/mixins/_index.scss
+++ b/src/mixins/_index.scss
@@ -22,6 +22,7 @@
 @import "hu-responsive";
 @import "hu-responsive-base";
 @import "hu-responsive-classes";
+@import "hu-responsive-group-hover";
 @import "hu-responsive-group-state";
 @import "hu-responsive-state";
 @import "hu-state";
