--- a/src/mixins/_hu-responsive.scss
+++ b/src/mixins/_hu-responsive.scss
@@ -11,6 +11,12 @@
     }
   }
 
+  @if (index($modules, group-hover)) {
+    @include hu-responsive-group-hover($class-name, $mq-scale) {
+      @content;
+    }
+  }
+
   @if (index($modules, group-state)) {
     @include hu-responsive-group-state($class-name, $mq-scale) {
       @content;
